# pytbeaglehon

./: .gitignore  COPYRIGHT  ChangeLog  LICENSE.txt  MANIFEST.in  Makefile.am  README.txt  bootstrap.sh  config.h.in  configure.ac  setup.cfg  setup.py
c_example/: Makefile.am  beagle_template.c  template.c  testfatbeagle.c  tracetest.c
doc/: Makefile  make.bat
doc/source/: conf.py  index.rst
doc_c/: .gitignore  doxyfile  fatbeagle.css  index.html
examples/: gtr.py
pytbeaglehon/: Makefile.am  __init__.py  asrv.py  disc_char_type.py  disc_state_cont_time_model.py  like_calc_environ.py  op_scheduling.py  parameter.py  tree_scorer.py
pytbeaglehon/ccore/: Makefile.am  __init__.py  asrv.c  asrv.h  calc_instance.c  calc_instance.h  discrete_state_model.c  discrete_state_model.h  doc.dox  internal_like_calc_env.h  phylo_util.c  phylo_util.h  py_asrv.c  py_asrv.h  py_beagle.c  py_beagle.h  py_calc_instance.c  py_calc_instance.h  py_discrete_state_model.c  py_discrete_state_model.h  py_util.c  py_util.h  pytbeaglehon_defs.h
pytbeaglehon/tests/: __init__.py  test_asrv.py  test_disc_char_type.py  test_disc_state_model.py  test_like_calc_environ.py  test_likelihood.py  test_parameter.py  util.py
scripts/: gtr_prob_mat.py
xcodepytbeaglehon/xcodepytbeaglehon.xcodeproj/: project.pbxproj
