lib_LTLIBRARIES = libfatbeagle.la
libfatbeagle_ladir = $(includedir)/pytbeaglehon/ccore

libfatbeagle_la_HEADERS = \
	asrv.h \
	calc_instance.h \
	discrete_state_model.h \
    internal_like_calc_env.h \
	phylo_util.h \
	pytbeaglehon_defs.h


libfatbeagle_la_SOURCES = \
	asrv.c \
	calc_instance.c \
	discrete_state_model.c \
	phylo_util.c

